--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Settings.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Settings.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-29 14:50+0700\n"
-"PO-Revision-Date: 2019-01-29 14:58+0700\n"
+"POT-Creation-Date: 2019-01-30 11:07+0700\n"
+"PO-Revision-Date: 2019-01-30 11:08+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -28,13 +28,14 @@ msgstr "Настройки"
 msgid ""
 "In the *Accounts* -> *Settings* section a user can modify the interface by "
 "changing settings. The interface settings are presented in separate sections: "
-"*Security, API configurations, VM preferences, Look and Feel*. Moving between "
-"sections is possible using the switcher above."
+"*Security, API configurations, VM preferences, Look and Feel, Account tags, "
+"User tags*. Moving between sections is possible using the switcher above."
 msgstr ""
 "В разделе *Аккаунты -> Настройки* пользователь может менять настройки "
 "интерфейса. Все настройки разделены по разделам: *\"Настройки безопасности\", "
-"\"Конфигурации API\", \"Настройки ВМ\", \"Настройки интерфейса\".* Для "
-"перемещения между разделами используется переключатель вверху."
+"\"Конфигурации API\", \"Настройки ВМ\", \"Настройки интерфейса\", \"Теги "
+"аккаунта\", \"Теги пользователя\".* Для перемещения между разделами "
+"используется переключатель вверху."
 
 #: ../../CSUI-Settings.rst:12
 msgid "Security"
