--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-25 09:52+0700\n"
-"PO-Revision-Date: 2019-01-25 10:25+0700\n"
+"POT-Creation-Date: 2019-01-30 11:07+0700\n"
+"PO-Revision-Date: 2019-01-30 11:10+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -294,22 +294,25 @@ msgstr ""
 "позволяет обновить всю систему."
 
 #: ../../CSUI-Start.rst:98
-msgid "Error messages"
-msgstr "Уведомления об ошибках"
+msgid "Support Information in Error Messages"
+msgstr "Информация о технической поддержке при возникновении ошибок"
 
 #: ../../CSUI-Start.rst:100
 msgid ""
 "A user can add the information on support services to all error messages to "
-"make it faster to get the support in case of failure. This information should "
-"be specified in the ``support-info.md`` file stored in a `special folder "
-"<https://github.com/bwsw/cloudstack-ui/tree/master/src/support>`_ of the "
-"project."
+"let users get assistance faster in case of a failure. Support information "
+"should be specified in the ``support-info.md`` file stored in a `special "
+"folder <https://github.com/bwsw/cloudstack-ui/tree/master/src/support>`_ of "
+"the project. It may include contacts e.g. phone numbers, emails or any other "
+"details."
 msgstr ""
 "Пользователь может добавить информацию о службе поддержки во все сообщения об "
-"ошибках. Это позволит быстрее связаться со службой и получить помощь при "
-"возникновении ошибок. Информация должна быть указана в файле ``support-info."
-"md``, который хранится в `специальной папке <https://github.com/bwsw/"
-"cloudstack-ui/tree/master/src/support>`_  проекта."
+"ошибках. Это позволит быстрее связаться со службой поддержки и получить помощь "
+"при возникновении ошибок. Информация должна быть указана в файле ``support-"
+"info.md``, который хранится в `специальной папке <https://github.com/bwsw/"
+"cloudstack-ui/tree/master/src/support>`_  проекта. Она может включать в себя "
+"контакнтые данные, например номера телефонов, адреса электронной почты или "
+"другие данные для быстрой связи со службой технической поддержки."
 
 #: ../../CSUI-Start.rst:102
 msgid ""
@@ -381,3 +384,6 @@ msgstr "Поддерживается локализация файла."
 #~ "hide menu| вверху. Позиция навигационной панели запоминается системой и не "
 #~ "меняется при входе/выходе из системы, перезагрузке страницы, передвижении "
 #~ "от раздела к разделу. "
+
+#~ msgid "Error messages"
+#~ msgstr "Уведомления об ошибках"
