--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-VirtualMachines.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-VirtualMachines.po
@@ -1091,7 +1091,7 @@ msgid ""
 "copy them and address the support service to get assistance in solving the "
 "problem in the shortest time."
 msgstr ""
-"Мы реализовали возможность просматривать логи API, чтобы дать вам возможность "
+"Мы реализовали просмотр логов API, чтобы дать вам возможность "
 "скопировать их и, например, обратиться в службу технической поддержки для более "
 "быстрого решения проблемы."
 
