--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -617,7 +617,7 @@
       "DEPLOYMENT_FINISHED": "Развертывание завершено",
       "OS_TEMPLATE": "ОС шаблон",
       "NO_TEMPLATES": "Нет доступных шаблонов",
-      "NO_OFFERINGS": "Нет доступных сервисных предложений",
+      "NO_OFFERINGS": "Нет доступных вычислительных предложений",
       "GENERAL": "Основные",
       "ADVANCED": "Дополнительные",
       "DETAILS": "Детали",
