fix(resource-quotas): resource quotas messages were fixed (#1554)

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1547,11 +1547,11 @@
       "SECONDARY_STORAGE": "Secondary storage (GB)"
     },
     "REQUEST": {
-      "REQUEST_RESOURCES_BUTTON": "Update resources",
-      "REQUEST_RESOURCES_TITLE": "Update resources",
+      "REQUEST_RESOURCES_BUTTON": "Request resources",
+      "REQUEST_RESOURCES_TITLE": "Request resources",
       "LIMIT_UPDATED": "Resource limits updated successfully",
-      "CAN_NOT_CHANGE_RESOURCES": "You can not change any resource limits",
-      "REQUEST_BUTTON": "Update"
+      "CAN_NOT_CHANGE_RESOURCES": "You can not make any request to change resource limits",
+      "REQUEST_BUTTON": "Request"
     },
     "ADMIN_PAGE": {
       "QUOTA_UPDATED": "Resource quotas updated successfully",
