fix(error): fix error message when available resources are exceeded (#1555)

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -137,8 +137,7 @@
       "VOLUME_DELETING_UNAVAILABLE": "Удаление дополнительных дисков не доступно для ВМ с активными снимками",
       "VOLUME_ATTACH_UNAVAILABLE": "Прикрепление дополнительных дисков не доступно для ВМ с активными снимками",
       "VOLUME_DETACH_UNAVAILABLE": "Открепление дополнительных дисков не доступно для ВМ с активными снимками",
-      "VOLUME_RESIZE_UNAVAILABLE": "Изменение размера диска недоступно для ВМ с активными снимками",
-      "VOLUME_COUNT_RESOURCE_LIMIT_EXCEEDED": "Диск не может быть создан. Превышено максимальное количество дисков."
+      "VOLUME_RESIZE_UNAVAILABLE": "Изменение размера диска недоступно для ВМ с активными снимками"
     },
     "SNAPSHOT_POLICIES": {
       "HOURLY_TURN_OFF": "Почасовое расписание отключено"
@@ -153,7 +152,8 @@
     "RESOURCE_QUOTAS": {
       "FAILED_RETRIEVE": "Невозможно изменить ресурсы",
       "MAX_MUST_BE_GREATER": "Максимальное значение должно быть больше или равно минимальному",
-      "MAX_MUST_BE_BETWEEN": "Максимальное значение должно быть между {{ val1 }} и {{ val2 }}"
+      "MAX_MUST_BE_BETWEEN": "Максимальное значение должно быть между {{ val1 }} и {{ val2 }}",
+      "RESOURCE_LIMIT_EXCEEDED": "Доступное количество ресурса {{ val2 }} превышено"
     }
   },
   "NOTIFICATIONS": {
