--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1658,6 +1658,7 @@
   "ACCOUNT_NOT_FOUND": "Account not found",
   "PULSE": {
     "PULSE": "Pulse",
+    "DIALOG_TITLE": "Pulse plugin",
     "CPU_RAM": "CPU / RAM",
     "NETWORK": "Network",
     "DISK": "Disk",
