--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1655,6 +1655,7 @@
   "ACCOUNT_NOT_FOUND": "Аккаунт не найден",
   "PULSE": {
     "PULSE": "Pulse",
+    "DIALOG_TITLE": "Плагин Pulse",
     "CPU_RAM": "ЦП / ОЗУ",
     "NETWORK": "Сеть",
     "DISK": "Диск",
