--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -152,8 +152,11 @@
     },
     "RESOURCE_QUOTAS": {
       "FAILED_RETRIEVE": "Невозможно изменить ресурсы",
+      "FAILED_UPDATE": "Невозможно изменить ресурс",
       "MAX_MUST_BE_GREATER": "Максимальное значение должно быть больше или равно минимальному",
-      "MAX_MUST_BE_BETWEEN": "Максимальное значение должно быть между {{ val1 }} и {{ val2 }}"
+      "MAX_MUST_BE_BETWEEN": "Максимальное значение должно быть между {{ val1 }} и {{ val2 }}",
+      "NO_BILLING_ID": "Billing Id не задан для пользователя",
+      "RESOURCES_CAN_NOT_BE_PROVIDED": "Запрошенные ресурсы ОЗУ: {{ val1 }} ГБ, Первичное хранилище: {{ val2 }} ГБ, Дополнительное хранилище: {{ val3 }} ГБ не могут быть предоставлены. Для автоматического выделения требуется чтобы баланс счета был не менее чем {{ val4 }} Руб., сейчас {{ val5 }} Руб."
     }
   },
   "NOTIFICATIONS": {
