fix(pulse-plugin): added translations 3h range and 4m, 6m aggregations (#1562)

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1698,7 +1698,9 @@
       },
       "AGGREGATIONS": {
         "1M": "1 мин",
+        "4M": "4 мин",
         "5M": "5 мин",
+        "6M": "6 мин",
         "15M": "15 мин",
         "30M": "30 мин",
         "1H": "1 ч",
