--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -97,6 +97,7 @@
   "ERRORS": {
     "SUPPORT_INFORMATION": "Support information",
     "COMMON": {
+      "INTERNAL_ERROR": "Internal error",
       "THE_NAME_IS_TAKEN": "The name {{ val1 }} is taken"
     },
     "AUTH": {
