--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -97,6 +97,7 @@
   "ERRORS": {
     "SUPPORT_INFORMATION": "Информация о тех. поддержке",
     "COMMON": {
+      "INTERNAL_ERROR": "Internal error",
       "THE_NAME_IS_TAKEN": "Имя {{ val1 }} уже занято"
     },
     "AUTH": {
