--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -372,8 +372,8 @@
       "FREE": "Доступно",
       "VMS": "Виртуальные машины",
       "NUMBER_OF_VMS": "Количество",
-      "COMPUTATIONAL_RESOURCES": "Вычислительные ресурсы",
-      "CPUS": "CPU",
+      "": "Вычислительные ресурсы",
+      "CPUS": "COMPUTATIONAL_RESOURCESCPU",
       "RAM": "ОЗУ",
       "VOLUMES": "Диски",
       "SNAPSHOTS": "Снимки",
@@ -1544,7 +1544,7 @@
       "NETWORK": "Сеть",
       "VPCS": "VPC",
       "CPUS": "CPU",
-      "MEMORY": "Память (МБ)",
+      "MEMORY": "Память (ГБ)",
       "PRIMARY_STORAGE": "Основное хранилище (ГБ)",
       "SECONDARY_STORAGE": "Дополнительное хранилище (ГБ)"
     },
