--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -143,7 +143,8 @@
       "VOLUME_RESOURCES_LIMIT_EXCEEDED": "Диск не может быть выбран. Размер выбранного диска превышает доступные ресурсы аккаунта.",
       "VOLUME_DELETING_UNAVAILABLE": "Удаление дополнительных дисков не доступно для ВМ с активными снимками",
       "VOLUME_ATTACH_UNAVAILABLE": "Прикрепление дополнительных дисков не доступно для ВМ с активными снимками",
-      "VOLUME_ATTACH_UNAVAILABLE_AS_MIGRATION_NOT_ALLOWED": "Прикрепление дополнительных дисков не доступно для удаленных ВМ",
+      "VOLUME_ATTACH_UNAVAILABLE_FOR_DELETED": "Прикрепление дополнительных дисков не доступно для для удаленных ВМ",
+      "VOLUME_ATTACH_UNAVAILABLE_AS_MIGRATION_NOT_ALLOWED": "Прикрепление дополнительных дисков не доступно, запрещена миграция локальных дисков",
       "VOLUME_DETACH_UNAVAILABLE": "Открепление дополнительных дисков не доступно для ВМ с активными снимками",
       "VOLUME_RESIZE_UNAVAILABLE": "Изменение размера диска недоступно для ВМ с активными снимками",
       "VOLUME_COUNT_RESOURCE_LIMIT_EXCEEDED": "Максимальное количество дисков превышено. Лимит аккаунта равен {{ val1 }}"
