--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -155,8 +155,7 @@
       "FAILED_UPDATE": "You can not resource limit",
       "MAX_MUST_BE_GREATER": "Максимальное значение должно быть больше или равно минимальному",
       "MAX_MUST_BE_BETWEEN": "Максимальное значение должно быть между {{ val1 }} и {{ val2 }}",
-      "NO_BILLING_ID": "Billing Id не задано для пользователя",
-      "RESOURCES_CAN_NOT_BE_PROVIDED": "Запрошенные ресурсы ОЗУ: {{ val1 }} ГБ, Основное хранилище: {{ val2 }} ГБ, Дополнительное хранилище: {{ val3 }} GB не могут быть предоставлены. Для автоматического выделения требуется чтобы баланс счета был не менее чем {{ val4 }} Руб., сейчас {{ val5 }} Руб."
+      "NO_BILLING_ID": "Billing Id не задано для пользователя"
     }
   },
   "NOTIFICATIONS": {
