fix(vm): fixed ISO Detachment failed error translation (#1581)

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -107,6 +107,7 @@
     },
     "ISO": {
       "INVALID_ISO": "Invalid ISO. Please specify valid URL.",
+      "DETACHMENT_FAILED": "Failed to detach an ISO",
       "VMS_IN_USE": "Unable to delete the ISO as it's used by the following VMs:<br>{{ vms }}"
     },
     "TEMPLATE": {
