--- a/docs/source/locale/ru/LC_MESSAGES/CS-UI_Pulse.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CS-UI_Pulse.po
@@ -237,7 +237,7 @@ msgstr ""
 "Система сохраняет заданные настройки. Они используются в остальных вкладках. "
 "Это значит, что если вы задали настройки для получения отчета по "
 "использованию ЦП/памяти, то при перемещении между вкладками вы увидите, что "
-"графики по сети и дискам будут автоматически построены с заданными "
+"графики по сети и дискам будут автоматически построены с теми же "
 "настройками."
 
 #: ../../CS-UI_Pulse.rst:91
