--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
@@ -311,7 +311,7 @@ msgstr ""
 "при возникновении ошибок. Информация должна быть указана в файле ``support-"
 "info.md``, который хранится в `специальной папке <https://github.com/bwsw/"
 "cloudstack-ui/tree/master/src/support>`_  проекта. Она может включать в себя "
-"контакнтые данные, например номера телефонов, адреса электронной почты или "
+"контактные данные, например номера телефонов, адреса электронной почты или "
 "другие данные для быстрой связи со службой технической поддержки."
 
 #: ../../CSUI-Start.rst:101
