--- a/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
+++ b/docs/source/locale/ru/LC_MESSAGES/CSUI-Start.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CSUI\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-03-06 17:28+0700\n"
-"PO-Revision-Date: 2019-03-06 17:31+0700\n"
+"POT-Creation-Date: 2019-03-07 11:40+0700\n"
+"PO-Revision-Date: 2019-03-07 11:48+0700\n"
 "Last-Translator: \n"
 "Language: ru\n"
 "Language-Team: \n"
@@ -311,7 +311,7 @@ msgstr ""
 "при возникновении ошибок. Информация должна быть указана в файле ``support-"
 "info.md``, который хранится в `специальной папке <https://github.com/bwsw/"
 "cloudstack-ui/tree/master/src/support>`_  проекта. Она может включать в себя "
-"контактные данные, например номера телефонов, адреса электронной почты или "
+"контакнтые данные, например номера телефонов, адреса электронной почты или "
 "другие данные для быстрой связи со службой технической поддержки."
 
 #: ../../CSUI-Start.rst:101
@@ -345,16 +345,19 @@ msgstr ""
 msgid ""
 "Custom scripts are added at running the CloudStack-UI Docker-container. All "
 "that a user should do is to define the ``/scripts/custom.js`` custom script "
-"content and map it via a Docker-volume."
+"content and map it via a Docker-volume. By default, the ``/scripts/custom.js`` "
+"file is empty."
 msgstr ""
 "Интеграция пользовательских скриптов JavaScript производится при запуске "
 "Docker-контейнера с приложением. Пользователю достаточно определить содержимое "
 "файла ``/scripts/custom.js`` и отобразить его через Docker-volume при запуске "
-"контейнера."
+"контейнера. По умолчанию файл  ``/scripts/custom.js`` пустой."
 
 #: ../../CSUI-Start.rst:114
-msgid "By default, the ``/scripts/custom.js`` file is empty."
-msgstr "По умолчанию, файл ``/scripts/custom.js`` пустой."
+msgid "As a result, you can see the added service in the UI:"
+msgstr ""
+"В результате, в UI появится добавленный сервис. На изображении ниже "
+"отображается подключенный виджет JivoSite:"
 
 #~ msgid ""
 #~ "To the left you can see the main navigation bar. It allows moving from "
@@ -416,3 +419,6 @@ msgstr "По умолчанию, файл ``/scripts/custom.js`` пустой."
 
 #~ msgid "Error messages"
 #~ msgstr "Уведомления об ошибках"
+
+#~ msgid "By default, the ``/scripts/custom.js`` file is empty."
+#~ msgstr "По умолчанию, файл ``/scripts/custom.js`` пустой."
