--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -132,7 +132,7 @@
     },
     "VM": {
       "INSUFFICIENT_RESOURCES": "Insufficient resources",
-      "USER_DATA_TOO_BIG": "Maximum user data size is exceeded"
+      "USER_DATA_TOO_BIG": "Maximum size of VM UserData is exceeded"
     },
     "VM_POST_ACTION": {
       "INVALID_URL": "Invalid URL. Please check values in VM tags"
@@ -298,9 +298,9 @@
       "CHANGE_SSH_IN_PROGRESS": "Changing an SSH-key",
       "CHANGE_SSH_DONE": "SSH-key changed",
       "CHANGE_SSH_FAILED": "Failed to change an SSH-key",
-      "CHANGE_USER_DATA_IN_PROGRESS": "Changing a user data",
-      "CHANGE_USER_DATA_DONE": "User data changed",
-      "CHANGE_USER_DATA_FAILED": "Failed to change a user data"
+      "CHANGE_USER_DATA_IN_PROGRESS": "Changing VM UserData",
+      "CHANGE_USER_DATA_DONE": "VM UserData changed",
+      "CHANGE_USER_DATA_FAILED": "Failed to change VM UserData"
     },
     "VOLUME": {
       "DETACHMENT_IN_PROGRESS": "Detaching a volume",
@@ -430,7 +430,7 @@
         "ZONE": "Zone",
         "HOST_NAME": "VM host name",
         "ID": "ID",
-        "USER_DATA": "User data"
+        "USER_DATA": "VM UserData"
       },
       "SECURITY_GROUP": {
         "STOP_MACHINE_FOR_SG": "You need to stop the virtual machine to change security group. Do you want to stop it now?",
@@ -650,7 +650,7 @@
       "NO_OFFERINGS": "There are no service offering available",
       "GENERAL": "General",
       "ADVANCED": "Advanced",
-      "USER_DATA": "User data",
+      "USER_DATA": "VM UserData",
       "DETAILS": "Details",
       "REQUEST": "REQUEST",
       "PARAMS": "PARAMS",
@@ -670,9 +670,9 @@
         "ACTIONS": "Actions"
       },
       "VM_USER_DATA": {
-        "TITLE": "User data",
-        "USER_DATA": "User data",
-        "NO_USER_DATA": "No user data"
+        "TITLE": "VM UserData",
+        "USER_DATA": "VM UserData",
+        "NO_USER_DATA": "No VM UserData"
       }
     }
   },
